# Bloop-Site

./: .dockerignore  .env.example  .env.production.example  .gitignore  .package-lock.json  AGENT_SYSTEM_COMPLETE.md  AGENT_SYSTEM_PROGRESS.md  AGENT_TESTING.md  ARCHITECTURE.md  AUTONOMOUS_AGENTS_CODE_INTELLIGENCE_COMPLETE.md  AUTONOMOUS_AGENTS_COMPLETION.md  AUTONOMOUS_AGENTS_FINAL_SUMMARY.md  AUTONOMOUS_AGENTS_PLAN.md  AUTONOMOUS_AGENTS_REMAINING_FEATURES.md  AUTONOMOUS_AGENTS_SUMMARY.md  CODE_INTELLIGENCE_FEATURES.md  COMPLETE_SUMMARY.md  DEMO_GUIDE.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  FEATURES_COMPARISON.md  FINAL_IMPLEMENTATION_SUMMARY.md  FOUNDATION_IMPROVEMENTS.md  FOUNDATION_PROGRESS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  KEY_FEATURES_SUMMARY.md  LOCALHOST_GUIDE.md  MODELS.md  PHASE1_IMPROVEMENTS.md  PHASE1_PROGRESS.md  PHASE_2_3_SUMMARY.md  PHASE_2_ENHANCEMENTS.md  PHASE_4_PLAN.md  QUICK_START.md  README.md  REAL_FEATURES_COMPLETE.md  RUST_SETUP.md  SCALABILITY_COMPLETE.md  (+16 more)
backend/: .gitignore  Cargo.toml  DATABASE_SETUP.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
backend/migrations/: 001_create_integrations_tables.sql  002_create_company_tables.sql  003_create_collaboration_tables.sql
backend/src/: config.rs  config_validation.rs  main.rs  types.rs
backend/src/api/routes/: agents.rs  chat.rs  codebase.rs  collaboration.rs  company.rs  context.rs  execute.rs  files.rs  health.rs  mod.rs  models.rs  moltbook.rs  openclaw.rs  security.rs
backend/src/database/: mod.rs  models.rs
backend/src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs  request_id.rs  security.rs
backend/src/security/: audit_logger.rs  encryption.rs  mod.rs  rate_limiter.rs  threat_detection.rs  validation.rs  vulnerability_scanner.rs
backend/src/services/: mod.rs  websocket_security.rs
backend/src/services/agent/: decomposer.rs  executor.rs  fault_tolerance.rs  manager.rs  mod.rs  monitoring.rs  queue.rs  security.rs  tests.rs  timeout.rs  types.rs
backend/src/services/ai/: anthropic.rs  anyscale.rs  (+15 more)
backend/src/types/: errors.rs
backend/src/utils/: logger.rs  mod.rs  validation.rs
backend/tests/: company_tests.rs
(+137 files in other folders)
